--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -16,5 +16,8 @@
     "jade": "~1.11.0",
     "mongoose": "^5.9.24",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.04"
   }
 }
