--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "server": "nodemon ./bin/www",
+    "client": "cd ../client && npm start && cd -",
+    "app": "concurrently \"npm run server\" \"npm run client\""
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -18,6 +21,6 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
-    "nodemon": "^2.04"
+    "nodemon": "^2.0.7"
   }
 }
