--- a/mongodb-deployment.yaml
+++ b/mongodb-deployment.yaml
@@ -13,7 +13,8 @@ spec:
   selector:
     matchLabels:
       io.kompose.service: mongodb
-  strategy: {}
+  strategy:
+    type: Recreate
   template:
     metadata:
       annotations:
@@ -34,5 +35,12 @@ spec:
           ports:
             - containerPort: 27017
           resources: {}
+          volumeMounts:
+            - mountPath: /data/db
+              name: mongodb-data
       restartPolicy: Always
+      volumes:
+        - name: mongodb-data
+          persistentVolumeClaim:
+            claimName: mongodb-data
 status: {}
