--- a/mongo-express-deployment.yaml
+++ b/mongo-express-deployment.yaml
@@ -8,6 +8,7 @@ metadata:
   labels:
     io.kompose.service: mongo-express
   name: mongo-express
+  namespace: tsic2-ns
 spec:
   replicas: 1
   selector:
@@ -38,3 +39,24 @@ spec:
           resources: {}
       restartPolicy: Always
 status: {}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  annotations:
+    kompose.cmd: kompose convert
+    kompose.version: 1.22.0 (HEAD)
+  creationTimestamp: null
+  labels:
+    io.kompose.service: mongo-express
+  name: mongo-express
+  namespace: tsic2-ns
+spec:
+  ports:
+    - name: "8080"
+      port: 8080
+      targetPort: 8081
+  selector:
+    io.kompose.service: mongo-express
+status:
+  loadBalancer: {}
