--- a/react-frontend-deployment.yaml
+++ b/react-frontend-deployment.yaml
@@ -8,6 +8,7 @@ metadata:
   labels:
     io.kompose.service: react-frontend
   name: react-frontend
+  namespace: tsic2-ns
 spec:
   replicas: 1
   selector:
@@ -27,7 +28,7 @@ spec:
         - env:
             - name: REACT_APP_BACKEND_URL
               value: http://localhost:9000
-          image: tsic2-frontend:0.1
+          image: redrichard/reactjs-mern-stack:1.0
           name: react-frontend
           ports:
             - containerPort: 3000
@@ -35,3 +36,24 @@ spec:
           tty: true
       restartPolicy: Always
 status: {}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  annotations:
+    kompose.cmd: kompose convert
+    kompose.version: 1.22.0 (HEAD)
+  creationTimestamp: null
+  labels:
+    io.kompose.service: react-frontend
+  name: react-frontend
+  namespace: tsic2-ns
+spec:
+  ports:
+    - name: "3000"
+      port: 3000
+      targetPort: 3000
+  selector:
+    io.kompose.service: react-frontend
+status:
+  loadBalancer: {}
