--- a/nodejs-backend-deployment.yaml
+++ b/nodejs-backend-deployment.yaml
@@ -60,5 +60,6 @@ spec:
       targetPort: 9000
   selector:
     io.kompose.service: nodejs-backend
+  type: LoadBalancer
 status:
   loadBalancer: {}
