--- a/react-frontend-deployment.yaml
+++ b/react-frontend-deployment.yaml
@@ -53,7 +53,10 @@ spec:
     - name: "3000"
       port: 3000
       targetPort: 3000
+      nodePort: 30000
   selector:
     io.kompose.service: react-frontend
+  type: LoadBalancer
+
 status:
   loadBalancer: {}
